🐛 fix: Feedback text stuck forever + PayPal English locale
- FIXED: PERFECT/MISS/GOOD text staying on screen permanently
  → Removed unreliable CSS keyframe animation approach
  → Now uses pure JS inline styles with setTimeout
  → Text pops in (0ms) → holds (400ms) → fades out (300ms)
  → clearTimeout prevents overlapping animations

- FIXED: PayPal buttons showing Korean text
  → Added locale=en_US to PayPal SDK URL
  → '직불카드 또는 신용카드' → 'Debit or Credit Card'

--- a/index.html
+++ b/index.html
@@ -699,12 +699,25 @@
 
             function showFeedback(text, color) {
                 const el = $('feedbackText');
+                clearTimeout(el._fadeTimer);
+                clearTimeout(el._hideTimer);
                 el.textContent = text;
                 el.style.color = color;
-                // Restart CSS keyframe animation
-                el.classList.remove('show');
-                void el.offsetWidth; // force reflow to reset animation
-                el.classList.add('show');
+                // Instant show: pop in
+                el.style.transition = 'none';
+                el.style.opacity = '1';
+                el.style.transform = 'translate(-50%, -60%) scale(1.05)';
+                // Settle
+                requestAnimationFrame(() => {
+                    el.style.transition = 'transform 0.15s ease-out';
+                    el.style.transform = 'translate(-50%, -55%) scale(1)';
+                });
+                // Fade out after 400ms
+                el._fadeTimer = setTimeout(() => {
+                    el.style.transition = 'opacity 0.3s ease-out, transform 0.3s ease-out';
+                    el.style.opacity = '0';
+                    el.style.transform = 'translate(-50%, -70%) scale(0.9)';
+                }, 400);
             }
 
             function showScorePopup(text) {
