--- a/index.html
+++ b/index.html
@@ -22,6 +22,15 @@
     <link href="https://fonts.googleapis.com/css2?family=Outfit:wght@300;400;500;600;700;800;900&display=swap"
         rel="stylesheet" />
     <link rel="stylesheet" href="css/style.css" />
+    <!-- iOS Safari / KakaoTalk viewport height fix -->
+    <script>
+        function setVH() {
+            document.documentElement.style.setProperty('--vh', window.innerHeight * 0.01 + 'px');
+        }
+        setVH();
+        window.addEventListener('resize', setVH);
+        window.addEventListener('orientationchange', function () { setTimeout(setVH, 150); });
+    </script>
 </head>
 
 <body>
