🔄 Cache bust: CSS v6.2 query param + ready for new zip filename

--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
     <link rel="modulepreload" href="js/firebase-sdk.min.js" />
     <link href="https://fonts.googleapis.com/css2?family=Outfit:wght@300;400;500;600;700;800;900&display=swap"
         rel="stylesheet" />
-    <link rel="stylesheet" href="css/style.css" />
+    <link rel="stylesheet" href="css/style.css?v=6.2" />
     <!-- iOS Safari / KakaoTalk viewport height fix -->
     <script>
         function setVH() {
